--- a/pixi.toml
+++ b/pixi.toml
@@ -64,7 +64,7 @@ python=">=3.14,<3.15"
 [feature.dev.dependencies]
 jupyterlab = ">=4.4.3,<5"
 
-[feature.test_data.dependencies]
+[feature.test-data.dependencies]
 pytest = "*"
 
 [environments]
@@ -72,7 +72,7 @@ prod = { features = ["py313"], solve-group = "prod" }
 # use default for the dev environment so tasks are resolved in this environment (avoids having to specify env)
 # no need to include doc: pixi will figure the environment to use from the task if it is unique
 default = { features = ["dev", "py313","test"], solve-group = "prod" }
-
+test-data = ["test-data", "test", "py313"]
 # python 3.14 environments for testing
 prod314 = { features = ["py314"], solve-group = "prod314" }
 
