--- a/pixi.toml
+++ b/pixi.toml
@@ -12,6 +12,7 @@ python = ["3.12.*", "3.13.*", "3.14.*"]
 [dependencies]
 pkoffee = { path = "." }
 pytest = ">=9.0.2,<10"
+ruff = "*"
 
 [package]
 name = "pkoffee"
