replace runner with something

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,4 +6,4 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - echo "running tests on ${{runner.os}}"
+            - echo "running tests on something"
