--- a/pixi.toml
+++ b/pixi.toml
@@ -52,6 +52,7 @@ tomlkit = ">=0.13.3,<1"
 
 [feature.test.dependencies]
 pytest="*"
+pytest-cov = ">=4.1.0,<5"
 # A feature per-python version to test the build-variants
 [feature.py312.dependencies]
 python=">=3.12,<3.13"
