Add CI workflow (#7)
* Update pyproject.toml

* Revert "Update pyproject.toml"

* Add CI workflow to run tests on push

* Update CI workflow to include additional test steps

* Update CI workflow to include additional test steps

* Revise and finalize CI workflow configuration

* Fix CI workflow and update dependencies

--- a/pixi.toml
+++ b/pixi.toml
@@ -64,6 +64,7 @@ python=">=3.14,<3.15"
 
 [feature.dev.dependencies]
 jupyterlab = ">=4.4.3,<5"
+ruff = ">=0.9.0,<1"
 
 [environments]
 prod = { features = ["py313"], solve-group = "prod" }
